--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
   "name": "rj1901-ac-docs",
   "version": "1.0.0",
-  "description": "软件 1901 文档",
+  "description": "这是我们软件 1901 的班级文档。",
   "license": "MIT",
   "author": "Guany",
   "main": "index.js",
   "scripts": {
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs"
-  },
-  "dependencies": {
-    "vuepress-theme-reco": "^1.6.11"
   },
   "devDependencies": {
     "vuepress": "^1.9.7"
