--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "rj1901-ac-docs",
+  "name": "rj1901-docs",
   "version": "1.0.0",
-  "description": "软件 1901 班级文档",
+  "description": "软件 1901 文档",
   "license": "MIT",
   "author": "Guany",
   "scripts": {
