--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "docs:build": "vuepress build docs"
   },
   "devDependencies": {
+    "@vuepress/plugin-back-to-top": "^1.9.7",
+    "@vuepress/plugin-medium-zoom": "^1.9.7",
     "vuepress": "^1.9.7"
   }
 }
