--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "rj1901-docs",
   "version": "1.0.0",
-  "description": "软件 1901 文档",
+  "private": true,
+  "description": "📄 软件 1901 文档",
   "license": "MIT",
   "author": "Guany",
   "scripts": {
