--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rj1901-docs",
   "version": "1.0.0",
   "private": true,
-  "description": "📄 软件 1901 文档",
+  "description": "软件 1901 文档",
   "license": "MIT",
   "author": "Guany",
   "scripts": {
